--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-init": "node unit_test.js init",
+    "test": "node unit_test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jasmine-node": "^3.0.0"
   }
 }
