--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test-init": "node unit_test.js init",
-    "test": "node unit_test.js"
+    "test": "jasmine"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "jasmine-node": "^3.0.0"
+    "express": "^4.17.1",
+    "jasmine": "^3.5.0"
   }
 }
