--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^1.4.9",
-    "@angular/compiler-cli": "^4.4.6",
+    "@angular/cli": "~9.0.7",
+    "@angular/compiler-cli": "~9.0.7",
     "@angular/animations": "~9.0.7",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
